# E-commerce-price-tracker

./: .env  .env.example  .gitignore  Dockerfile  README.md  README_E-commerce-price-tracker.md  airflow.cfg  docker-compose-airflow.yml  docker-compose-producer-duplicate-network-version.yml  docker-compose-producer-network.yml  docker-compose-worker-network-version-swarm.yml  docker-compose-worker-network.yml  local.ini  local.ini.example  main.py  momo_scraper.py  mysql.yml  pchome_scraper.py  pyproject.toml  rabbitmq-network.yml  rabbitmq.yml  with.env.Dockerfile_Airflow
archived/: producer_crawler.py  producer_multi_queue.py
archived/docker_compose/: Dockerfile  docker-compose-producer-duplicate-network-version.yml  docker-compose-worker-network-version-swarm_celery.yml  docker-compose-worker-network.yml  mysql.yml  with.env.Dockerfile
crawler/: config.py  producer.py  producer_crawler.py  producer_multi_quene.py  producer_multi_queue.py  task.py  tasks_crawler.py  upload_data_to_mysql.py  worker.py
dataflow/: constant.py
dataflow/crawler/: config.py  tasks_crawler.py
dataflow/dags/: trigger_producer.py
dataflow/etl/: export_fct_daily_prices_to_bigquery.py  export_product_price_timeline_to_bigquery.py  python_operator.py  refresh_fct_daily.py  refresh_stg_momo.py  refresh_stg_momo.sql  refresh_stg_pchome.py  refresh_stg_pchome.sql  trigger_producer.py
deploy/env/: local.ini.example
docs/: airflow_docker_commands_legacy.md  docker_commands.md  migration_notes.md  setup_guide.md
scripts/: export_mysql_views_to_bigquery.py  test_mysql.py
(+17 files in other folders)
