[project]
name = "e-commerce-price-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.2.1",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "flask==3.1.0",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "pymysql>=1.1.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]
