[project]
name = "dataflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "sqlalchemy",
    "pymysql==1.0.2",
    "loguru==0.6.0",
    "apache-airflow==2.7.3",
    "apache-airflow-providers-docker==3.0.0",
    "celery[redis]>=5.6.0",
    "flower==1.0.0",
    "apache-airflow-providers-celery==3.6.0",
    "apache-airflow-providers-google==10.17.0",
    "apache-airflow-providers-cncf-kubernetes==7.13.0",
    "google-cloud-storage==2.16.0",
    "flask-session==0.5.0",
]

